// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/modalAsk should renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      [
        {
          "justifyContent": "flex-end",
        },
        {
          "justifyContent": "center",
        },
      ],
    ]
  }
  testID="Pressable"
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 12,
          "justifyContent": "center",
          "marginVertical": 20,
          "paddingHorizontal": 20,
          "paddingVertical": 24,
          "width": 734,
        },
        {
          "maxWidth": "80%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgba(43, 120, 238, 0.15)",
            "borderRadius": 100,
            "padding": 12,
          },
          {
            "backgroundColor": "rgba(245, 77, 61, 0.15)",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#F54D3D",
            "fontFamily": "Neotis",
            "fontSize": 36,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 8,
          "marginTop": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 18,
              "lineHeight": 22,
              "minHeight": 22,
            },
            [
              {
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#5E6678",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
              "minHeight": 16,
            },
            [
              {
                "paddingTop": 8,
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        descriptionText
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "paddingTop": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 6,
            "minHeight": 48,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#2B78EE",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 18,
                "lineHeight": 22,
                "minHeight": 22,
              },
              [
                {
                  "paddingHorizontal": 6,
                },
                undefined,
              ],
            ]
          }
        >
          Отмена
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#F54D3D",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginLeft": 6,
            "minHeight": 48,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 18,
                "lineHeight": 22,
                "minHeight": 22,
              },
              [
                {
                  "paddingHorizontal": 6,
                },
                undefined,
              ],
            ]
          }
        >
          Удалить
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/modalAsk should renders correctly with optional 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      [
        {
          "justifyContent": "flex-end",
        },
        {
          "justifyContent": "center",
        },
      ],
    ]
  }
  testID="Pressable"
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 12,
          "justifyContent": "center",
          "marginVertical": 20,
          "paddingHorizontal": 20,
          "paddingVertical": 24,
          "width": 734,
        },
        {
          "maxWidth": "80%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgba(43, 120, 238, 0.15)",
            "borderRadius": 100,
            "padding": 12,
          },
          {
            "backgroundColor": "rgba(245, 77, 61, 0.15)",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#F54D3D",
            "fontFamily": "Neotis",
            "fontSize": 36,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 8,
          "marginTop": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 18,
              "lineHeight": 22,
              "minHeight": 22,
            },
            [
              {
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#5E6678",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
              "minHeight": 16,
            },
            [
              {
                "paddingTop": 8,
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        descriptionText
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "paddingTop": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#2B78EE",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 6,
            "minHeight": 48,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 18,
                "lineHeight": 22,
                "minHeight": 22,
              },
              [
                {
                  "paddingHorizontal": 6,
                },
                undefined,
              ],
            ]
          }
        >
          textLeft
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#2B78EE",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginLeft": 6,
            "minHeight": 48,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 18,
                "lineHeight": 22,
                "minHeight": 22,
              },
              [
                {
                  "paddingHorizontal": 6,
                },
                undefined,
              ],
            ]
          }
        >
          textRight
        </Text>
      </View>
    </View>
  </View>
</View>
`;
